k8s/pod-standalone.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nextjs
  labels:
    app: nextjs
spec:
  imagePullSecrets:
    - name: github-registry
  containers:
    - name: nextjs
      image: ghcr.io/koenverburg/template-nextjs/nextjs-standalone:1
      resources:
        limits:
          memory: '200Mi'
        requests:
          memory: '100Mi'
      ports:
        - containerPort: 3000
