k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextjs
  labels:
    app: nextjs
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    ingress.kubernetes.io/add-base-url: "true"
spec:
  rules:
  - host: nextjs-koenverburg.cloud.okteto.net
    http:
      paths:
      - path: /(.*)
        pathType: Exact  
        backend:
          service:
            name: nextjs
            port: 
              number: 80
